Fix horizontal scrolling

--- a/themes/daisy-saas/assets/css/main.css
+++ b/themes/daisy-saas/assets/css/main.css
@@ -5,3 +5,7 @@
 @tailwind utilities;
 @tailwind variants;
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
